SERVER-44778 Two-phase index builds aborted due to rollback should leave indexes unfinished in the catalog