src/mongo/db/commands/create_indexes.cpp
@@ -398,20 +398,6 @@ Collection* getOrCreateCollection(OperationContext* opCtx,
 }
 
 /**
- * Returns true if index specs include any unique indexes. Due to uniqueness constraints set up at
- * the start of the index build, we are not able to support failing over a two phase index build on
- * a unique index to a new primary on stepdown.
- */
-bool containsUniqueIndexes(const std::vector<BSONObj>& specs) {
-    for (const auto& spec : specs) {
-        if (spec["unique"].trueValue()) {
-            return true;
-        }
-    }
-    return false;
-}
-
-/**
  * Creates indexes using the given specs for the mobile storage engine.
  * TODO(SERVER-42513): Remove this function.
  */
@@ -759,8 +745,7 @@ bool runCreateIndexesWithCoordinator(OperationContext* opCtx,
             // If this node is no longer a primary, the index build will continue to run in the
             // background and will complete when this node receives a commitIndexBuild oplog entry
             // from the new primary.
-            // TODO(SERVER-44654): re-enable failover support for unique indexes.
-            if (indexBuildsCoord->supportsTwoPhaseIndexBuild() && !containsUniqueIndexes(specs) &&
+            if (indexBuildsCoord->supportsTwoPhaseIndexBuild() &&
                 ErrorCodes::InterruptedDueToReplStateChange == interruptionEx.code()) {
                 log() << "Index build continuing in background: " << buildUUID;
                 throw;
@@ -785,8 +770,7 @@ bool runCreateIndexesWithCoordinator(OperationContext* opCtx,
 
             // The index build will continue to run in the background and will complete when this
             // node receives a commitIndexBuild oplog entry from the new primary.
-            // TODO(SERVER-44654): re-enable failover support for unique indexes.
-            if (indexBuildsCoord->supportsTwoPhaseIndexBuild() && !containsUniqueIndexes(specs)) {
+            if (indexBuildsCoord->supportsTwoPhaseIndexBuild()) {
                 log() << "Index build continuing in background: " << buildUUID;
                 throw;
             }
